2004-05-03  Murray Cumming  <murrayc@murrayc.com>

	* modulesets/gnome28.modules, gnome26.modules: Make libgnomeuimm depend
	on gnome-vfsmm.

2004-05-02  Anders Carlsson  <andersca@gnome.org>

	* modulesets/gnome26.modules: Use gnome-2-6 for libgnome*

2004-04-30  James Henstridge  <james@daa.com.au>

	* jhbuild/frontends/terminal.py (TerminalBuildScript.execute): if
	not pretty_print, don't try to syntax highlight output.

	* jhbuild/config.py (_known_keys): add pretty_print option, that
	defaults to True.

2004-04-29  James Henstridge  <james@daa.com.au>

	* modulesets/freedesktop.modules (hicolor-icon-theme): add MD5
	sum.

	* modulesets/gnome28.modules: same updates as in gnome26.

	* modulesets/gnome26.modules (scrollkeeper, audiofile,
	gnutls+friends, xchat, camorama): add MD5 sums to tarball entries.

	* modulesets/moduleset.dtd: update DTD for md5sum attribute on
	<source> elements.

	* modulesets/bootstrap.modules: add MD5 sums to all bootstrap
	modules.

	* jhbuild/modtypes/tarball.py (Tarball.get_localfile): new method
	to get the location of the local filename for the tarball.  Use
	config.tarballdir instead of checkoutroot.

	* jhbuild/config.py: add tarballdir config key that defaults to
	checkoutroot.

2004-04-28  James Henstridge  <james@daa.com.au>

	* jhbuild/modtypes/tarball.py (Tarball.__init__): add md5
	attribute.
	(Tarball.check_localfile): move download verification stuff here.
	(Tarball.do_download): use check_localfile() to check result of
	download.

2004-04-26  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* modulesets/gnome26.modules (eog): use gnome-2-6 branch.

2004-04-26  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* modulesets/gnome26.modules:
	use gnome-2-6 branches for libgnomeprint(ui).

2004-04-24  James Henstridge  <james@daa.com.au>

	* jhbuild/config.py (Config.setup_env): fix up error when we can't
	create the prefix.  Fix from Vee Satayamas <veetai@yahoo.com>
	(from bug #140999).
