@@ -1,4 +1,4 @@
-<?xml version="1.0" standalone="no"?> <!--*- mode: xml -*-->
+<?xml version="1.0" standalone="no"?> <!--*- mode: nxml -*-->
 <!DOCTYPE moduleset SYSTEM "moduleset.dtd">
 <?xml-stylesheet type="text/xsl" href="moduleset.xsl"?>
 <moduleset>
@@ -1189,5 +1189,5 @@
     <dependencies>
       <dep package="libgnomeui" />
     </dependencies>
-  </cvsmodule>  
+  </cvsmodule>
 </moduleset>
