@@ -1,3 +1,12 @@
+2004-05-03  James Henstridge  <james@daa.com.au>
+
+	* modulesets/*.modules: use nxml-mode instead of xml-mode (psgml).
+
+	* modulesets/schemas.xml: add file to map moduleset.rnc to the
+	modules file for nxml-mode.
+
+	* modulesets/moduleset.rnc: Relax-NG schema for module sets.
+
 2004-05-03  Murray Cumming  <murrayc@murrayc.com>
 
 	* modulesets/gnome28.modules, gnome26.modules: Make libgnomeuimm depend
